---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X has no field named b
  ┌─ testinput:6:19
  │
6 │         let y = x.b;
  │                   ^ Not a field of X


